# ai-hub-apps

./: .clang-format  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  Mohit Rajput  README.md  mypy.ini  version_info.py
.github/public_workflows/: public-gh-stale.yml
apps/: versions.yaml
apps/android/: build.gradle  common.gradle  gradle.properties  settings.gradle
apps/android/ChatApp/: README.md  build.gradle  info.yaml
apps/android/ChatApp/src/main/cpp/: CMakeLists.txt  GenieLib.cpp  GenieWrapper.cpp  GenieWrapper.hpp  PromptHandler.cpp  PromptHandler.hpp
apps/android/ImageClassification/: README.md  build.gradle  gradle.properties  info.yaml
apps/android/ObjectDetection/: README.md  build.gradle  gradle.properties  info.yaml  settings.gradle
apps/android/SemanticSegmentation/: README.md  build.gradle  info.yaml
apps/android/SuperResolution/: README.md  build.gradle  info.yaml
apps/android/WhisperKit/: README.md
apps/android/gradle/wrapper/: gradle-wrapper.properties
apps/android/qnn_sdk/: build.gradle
apps/windows/ObjectDetection/: ObjectDetection.sln  ObjectDetection.vcxproj  ObjectDetection.vcxproj.filters  ObjectDetectionApp.cpp  README.md  packages.config  vcpkg.json
apps/windows/cpp/ChatApp/: .gitignore  ChatApp.cpp  ChatApp.hpp  ChatApp.sln  ChatApp.vcxproj  ChatApp.vcxproj.filters  Main.cpp  PromptHandler.cpp  PromptHandler.hpp  README.md  info.yaml
apps/windows/cpp/ChatServer/: .gitignore  ChatServer.cpp  ChatServer.hpp  ChatServer.sln  ChatServer.vcxproj  ChatServer.vcxproj.filters  HttpServer.cpp  HttpServer.hpp  Main.cpp  PromptHandler.cpp  PromptHandler.hpp  README.md
apps/windows/cpp/Classification/: Classification.sln  Classification.vcxproj  Classification.vcxproj.filters  ClassificationApp.cpp  ClassificationApp.hpp  Main.cpp  README.md  Utilities.cpp  Utilities.hpp  copy_missing_qnn_ep_files.bat  info.yaml  packages.config
apps/windows/cpp/ObjectDetection/: Main.cpp  ObjectDetection.sln  ObjectDetection.vcxproj  ObjectDetection.vcxproj.filters  ObjectDetectionApp.cpp  ObjectDetectionApp.hpp  README.md  Utilities.cpp  Utilities.hpp  info.yaml  packages.config
apps/windows/cpp/SuperResolution/: Main.cpp  README.md  SuperResolution.sln  SuperResolution.vcxproj  SuperResolution.vcxproj.filters  SuperResolutionApp.cpp  SuperResolutionApp.hpp  Utilities.cpp  Utilities.hpp  info.yaml
apps/windows/python/: activate_venv.ps1  install_platform_deps.ps1  install_python_deps.ps1
apps/windows/python/BringYourOwnModel/: README.md
apps/windows/python/StableDiffusion/: README.md  demo.py
apps/windows/python/Whisper/: README.md  demo.py  evaluate.py  model.py  requirements.txt
python/: pyproject.toml
python/qai_hub_apps/: __init__.py  requirements.txt
python/qai_hub_apps/configs/: info_yaml.py  versions_yaml.py
python/qai_hub_apps/scripts/: get_version.py
python/qai_hub_apps/scripts/installers/: install_android_sdk.py
python/qai_hub_apps/test/: helpers.py
python/qai_hub_apps/test/test_configs/: test_info_yaml.py
python/qai_hub_apps/utils/: envvars.py  paths.py  verify_result.py
python/qai_hub_apps/utils/android/: android_gradle_helpers.py  android_sdk_installer.py
tutorials/deploy/onnx/: README.md  build_deployable_asset.py  requirements.txt
tutorials/llm_on_genie/: README.md  increase_swap.md  manual_bundle.md
tutorials/llm_on_genie/configs/genie/: baichuan2_7b_quantized.json  falcon_v3_7b_instruct.json  granite_v3_1_8b_instruct_quantized.json  llama_v2_7b_chat.json  llama_v2_7b_chat_quantized.json  llama_v3_1_8b_chat.json  llama_v3_8b_chat.json  (+17 more)
tutorials/llm_on_genie/powershell/: LlmUtils.ps1  README.md  RunLlm.ps1
tutorials/llm_on_genie/windows/: utf8.md
(+73 files in other folders)
